[gd_scene load_steps=2 format=3 uid="uid://bly6d5yx26mpw"]

[ext_resource type="Script" path="res://shop.gd" id="1_0v41x"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_0v41x")

[node name="Button" type="Button" parent="."]
offset_left = 128.0
offset_top = 512.0
offset_right = 448.0
offset_bottom = 576.0
text = "Reroll"

[node name="Button3" type="Button" parent="."]
offset_left = 512.0
offset_top = 512.0
offset_right = 832.0
offset_bottom = 576.0
text = "Reroll"

[node name="Label" type="Label" parent="."]
offset_left = 128.0
offset_top = 448.0
offset_right = 448.0
offset_bottom = 512.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 512.0
offset_top = 448.0
offset_right = 832.0
offset_bottom = 512.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="."]
offset_right = 128.0
offset_bottom = 64.0
text = "Back to Game"

[node name="Label2" type="Label" parent="."]
offset_left = 960.0
offset_right = 1152.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
